<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
    <ImageView
        android:id="@+id/setting"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_setting"
        android:scaleType="centerInside"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:background="@drawable/text_bg"
        android:onClick="onClick"/>


    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_below="@id/setting"
        style="@style/EtTheme"/>


    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:hint="@string/content"
        style="@style/EtTheme"/>

    <TextView
        android:id="@+id/negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:text="@string/negative"
        style="@style/BtnTheme"/>

    <TextView
        android:id="@+id/regex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_centerHorizontal="true"
        android:text="@string/regex"
        android:textColor="@color/posColor"
        style="@style/BtnTheme"/>

    <TextView
        android:id="@+id/positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_alignParentRight="true"
        android:text="@string/positive"
        android:textColor="@color/posColor"
        style="@style/BtnTheme"/>


</RelativeLayout>